--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 sudo: required
+language: python
+python:
+  - "3.6"
 services:
   - docker
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
-  - docker-compose run web python manage.py test
+  - docker-compose run web bash -c "coverage run manage.py test && coverage xml --ignore-errors"
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
